--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^4.7.2",
+    "gatsby-plugin-styled-components": "^6.8.0",
     "gh-pages": "^5.0.0",
     "node": "^19.8.1",
     "react": "^17.0.1",
